[project]
name = "ethicalads-io"
version = "0.0.1"
description = "EthicalAds.io website built with Pelican"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "invoke>=2.2.0",
    "jinja2>=3.1.6",
    "livereload>=2.7.1",
    "pelican[markdown]>=4.11.0",
    "pelican-related-posts==1.0.0",
]


# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10 for now
target-version = "py310"

[tool.ruff.lint]
# Enable:
#  Pyflakes (`F`)
#  pycodestyle (`E`) error codes.
#  isort (`I`) import sorting
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
force-single-line = true
case-sensitive = false
lines-after-imports = 2

# Ignore `F405` (import *) in config files
[tool.ruff.lint.per-file-ignores]
"config/settings/*" = ["F405"]

[dependency-groups]
dev = [
    "html5validator==0.4.2",
    "pre-commit==4.3.0",
    "ruff>=0.13.3",
    "tox>=4.30.3",
]
